k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: exam
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true" # Enable CORS for frontend
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://app.edugrade.com" # Allow requests from your frontend domain
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS" # Allow specific HTTP methods
    nginx.ingress.kubernetes.io/cors-allow-headers: "*" # Allow all headers (or specify necessary ones)
spec:
  rules:
    - host: app.edugrade.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
